--- a/red1/styles.css
+++ b/red1/styles.css
@@ -43,3 +43,61 @@ pre {font-family: monospace, monospace;
 img {border-style: none;
     max-width: 100%;
      }
+
+.container {  display: grid;
+grid-template-columns:  0.5fr 1.5fr 1fr;
+grid-template-rows: 0.5fr max-content max-content;
+gap: 2px 4px;
+padding: 3px;
+grid-auto-flow: row;
+grid-template-areas:
+    "header header header"
+    "menu content info"
+    "menu content info";
+min-height: 100%;
+
+}
+
+
+
+    
+    .Header { grid-area: header;
+    width: 100%;
+    color: #32a844;
+    border: 3px dashed beige;
+    background-color: #FCFBF4;
+    
+    
+    }
+    
+    #menu { grid-area: menu; 
+    padding: 3px;
+    margin: 25px;
+    background-color: #FCFBF4;
+    position: fixed;
+
+    }
+    
+    #content { grid-area: content;
+    padding: 3px;
+    margin: 25px; 
+    background-color: lightcyan;
+    justify-content: center;
+    align-items: center; 
+
+        
+}
+
+    
+    
+#info { grid-area: info;
+    padding: 10px;
+    border: 3px dotted gray;
+    margin: 25px; 
+    background-color: #FCFBF4;
+    
+    height: 600px;
+    max-width: 1fr;
+}
+    
+    
